--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-11  Richard Henderson  <rth@cygnus.com>
+
+	* combine.c (simplify_shift_const): Obey SHIFT_COUNT_TRUNCATED.
+
 Thu Aug 10 22:47:09 2000  Ovidiu Predescu  <ovidiu@cup.hp.com>
 
 	* configure.in:
