--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,13 @@
 2000-08-11  Richard Henderson  <rth@cygnus.com>
 
+	* reload.c (push_secondary_reload): When invoking a reload_{in,out}
+	pattern, always allocate a tertiary scratch register.
+
+	* config/alpha/alpha.md (reload_inqi): Use a DImode scratch.
+	(reload_inhi): Likewise.
+
+2000-08-11  Richard Henderson  <rth@cygnus.com>
+
 	* function.c (put_reg_into_stack): Allow type to be NULL.
 	(schedule_fixup_var_refs): Likewise.
 	(gen_mem_addressof): Allow decl to be NULL.
