--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* decl.c (check_tag_decl): Diagnose typename's which don't
+	declare anything.
+
 2000-08-10  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* init.c (build_aggr_init): Reject bogus array initializers
