--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.pt/typename26.C: New test.
+
 2000-08-10  Geoff Keating  <geoffk@cygnus.com>
 
 	* gcc.dg/920413-1.c: Allow for 'traditional C rejects 'U' suffix'
