--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.old-deja/g++.pt/explicit81.C: New test.
+
+2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.old-deja/g++.pt/typename26.C: New test.
 
 2000-08-10  Geoff Keating  <geoffk@cygnus.com>
