--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-11  Kazu Hirata  <kazu@hxi.com>
+
+	* flow.c: Fix formatting.
+
 2000-08-11  Richard Henderson  <rth@cygnus.com>
 
 	* reload.c (push_secondary_reload): When invoking a reload_{in,out}
