* extend.texi (Volatiles): Fix typos.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35632 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* extend.texi (Volatiles): Fix typos.
+
 2000-08-11  Kazu Hirata  <kazu@hxi.com>
 
 	* flow.c: Fix formatting.
