--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* parse.y (named_complex_class_head_sans_basetype): Remove
+	always true if.
+
+2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* decl2.c (build_expr_from_tree, case METHOD_CALL_EXPR): Build
 	explicit TEMPLATE_ID_EXPR args.
 	(build_expr_from_tree, case CALL_EXPR): Likewise.
