--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-11  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config-ml.in (CC, CXX): Don't introduce a leading space.
+
 2000-08-07  DJ Delorie  <dj@delorie.com>
 
 	* MAINTAINERS: Add self as a DJGPP maintainer
