* fixproto: Recognize DOS paths with drive letters as absolute paths.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35636 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-11 Laurynas Biveinis <lauras@softhome.net>
+
+	* fixproto: Recognize DOS paths with drive letters as absolute paths.
+
 2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* extend.texi (Volatiles): Fix typos.
