* c-parse.in (cast_expr): Avoid -Wstrict-prototype warnings for 	unprototyped function pointer casts on integer constants.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35638 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* c-parse.in (cast_expr): Avoid -Wstrict-prototype warnings for
+	unprototyped function pointer casts on integer constants.
+
 2000-08-11 Laurynas Biveinis <lauras@softhome.net>
 
 	* fixproto: Recognize DOS paths with drive letters as absolute paths.
