* gcc.texi (The Configuration File): Document         COLLECT2_HOST_INITIALIZATION, GCC_DRIVER_HOST_INITIALIZATION, and         UPDATE_PATH_HOST_CANONICALIZATION.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35642 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-11  Mark Elbrecht  <snowball3@bigfoot.com>
+ 
+	* gcc.texi (The Configuration File): Document
+	COLLECT2_HOST_INITIALIZATION, GCC_DRIVER_HOST_INITIALIZATION, and
+	UPDATE_PATH_HOST_CANONICALIZATION.
+
 2000-08-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* c-parse.in (cast_expr): Avoid -Wstrict-prototype warnings for
