--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-11  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* configure.in (CHILL_FOR_TARGET, CXX_FOR_TARGET): Use slightly more
+ 	portable shell script to convert blanks to commas in $LANGUAGES.
+
 2000-08-11  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config-ml.in (CC, CXX): Don't introduce a leading space.
