* config/ia64/ia64.h (PROMOTE_MODE): Only extend to SImode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35646 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-11  Richard Henderson  <rth@cygnus.com>
+
+	* config/ia64/ia64.h (PROMOTE_MODE): Only extend to SImode.
+
 2000-08-11  Mark Elbrecht  <snowball3@bigfoot.com>
  
 	* gcc.texi (The Configuration File): Document
