* std/straits.h (is_del): Boolify with !!.
        * std/bastring.cc (compare to charT*): Add rlen==n check.
        * std/bastring.h (Rep::grab): Add x86 atomic version.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35647 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++/ChangeLog
+++ b/libstdc++/ChangeLog
@@ -1,3 +1,12 @@
+2000-08-11  Jason Merrill  <jason@redhat.com>
+
+	* std/straits.h (is_del): Boolify with !!.
+
+2000-08-11  "Axel Habermann" <Axel.Habermann@xtradyne.de>
+
+	* std/bastring.cc (compare to charT*): Add rlen==n check.
+	* std/bastring.h (Rep::grab): Add x86 atomic version.
+
 2000-8-4  David E O'Brien  <obrien@FreeBSD.org>
 
 	* std/mask_array.h (mask_array): Rename template type
