--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -3435,36 +3435,38 @@
 
 ;; Modifies ar.unat
 (define_expand "gr_spill"
-  [(parallel
-     [(set (match_operand:DI 0 "memory_operand" "=m")
-	   (unspec:DI [(match_operand:DI 1 "register_operand" "r")] 1))
-      (clobber (match_dup 2))])]
+  [(parallel [(set (match_operand:DI 0 "memory_operand" "=m")
+		   (unspec:DI [(match_operand:DI 1 "register_operand" "r")
+			       (match_operand:DI 2 "const_int_operand" "")] 1))
+	      (clobber (match_dup 3))])]
   ""
-  "operands[2] = gen_rtx_REG (DImode, AR_UNAT_REGNUM);")
+  "operands[3] = gen_rtx_REG (DImode, AR_UNAT_REGNUM);")
 
-(define_insn "*gr_spill_internal"
+(define_insn "gr_spill_internal"
   [(set (match_operand:DI 0 "memory_operand" "=m")
-	(unspec:DI [(match_operand:DI 1 "register_operand" "r")] 1))
-   (clobber (match_operand:DI 2 "register_operand" ""))]
+	(unspec:DI [(match_operand:DI 1 "register_operand" "r")
+		    (match_operand:DI 2 "const_int_operand" "")] 1))
+   (clobber (match_operand:DI 3 "register_operand" ""))]
   ""
-  "st8.spill %0 = %1%P0"
+  ".mem.offset %2, 0\;st8.spill %0 = %1%P0"
   [(set_attr "type" "M")])
 
 ;; Reads ar.unat
 (define_expand "gr_restore"
-  [(parallel
-     [(set (match_operand:DI 0 "register_operand" "=r")
-	   (unspec:DI [(match_operand:DI 1 "memory_operand" "m")] 2))
-      (use (match_dup 2))])]
+  [(parallel [(set (match_operand:DI 0 "register_operand" "=r")
+		   (unspec:DI [(match_operand:DI 1 "memory_operand" "m")
+			       (match_operand:DI 2 "const_int_operand" "")] 2))
+	      (use (match_dup 3))])]
   ""
-  "operands[2] = gen_rtx_REG (DImode, AR_UNAT_REGNUM);")
+  "operands[3] = gen_rtx_REG (DImode, AR_UNAT_REGNUM);")
 
-(define_insn "*gr_restore_internal"
+(define_insn "gr_restore_internal"
   [(set (match_operand:DI 0 "register_operand" "=r")
-	(unspec:DI [(match_operand:DI 1 "memory_operand" "m")] 2))
-   (use (match_operand:DI 2 "register_operand" ""))]
+	(unspec:DI [(match_operand:DI 1 "memory_operand" "m")
+		    (match_operand:DI 2 "const_int_operand" "")] 2))
+   (use (match_operand:DI 3 "register_operand" ""))]
   ""
-  "ld8.fill %0 = %1%P1"
+  ".mem.offset %2, 0\;ld8.fill %0 = %1%P1"
   [(set_attr "type" "M")])
 
 (define_insn "fr_spill"
