--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
-2000-08-11  Geoffrey Keating  <geoffk@cygnus.com>
+2000-08-11  Jason Merrill  <jason@redhat.com>
 
-	* configure.in (CHILL_FOR_TARGET, CXX_FOR_TARGET): Use slightly more
- 	portable shell script to convert blanks to commas in $LANGUAGES.
+	* configure.in (CC_FOR_TARGET, CHILL_FOR_TARGET,
+	CXX_FOR_TARGET): Add -B$$r/gcc/ here.
+	(FLAGS_FOR_TARGET): Not here.
+	(CHILL_FOR_TARGET, CXX_FOR_TARGET): Don't check the list of languages.
 
 2000-08-11  Alexandre Oliva  <aoliva@redhat.com>
 
