--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-11  Kriang Lerdsuwanakij <lerdsuwa@scf-fs.usc.edu>
+
+	* parse.y (template_arg): Add rule for template qualified with
+	global scope.
+
 2000-08-11  Theodore Papadopoulo <Theodore.Papadopoulo@sophia.inria.fr>
 
 	* decl2.c (add_function): Reorganize.
