--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-12  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config-ml.in (CC): Remove bogus duplicate quotation mark from
+	previous delta.
+
 2000-08-11  Jason Merrill  <jason@redhat.com>
 
 	* configure.in (CC_FOR_TARGET, CHILL_FOR_TARGET,
