--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-13  Geoff Keating  <geoffk@cygnus.com>
 
+	* fixinc/inclhack.def (aix_pthread): New fix.
+	(aix_sysmachine): New fix.
+	* fixinc/fixincl.x: Regenerate.
+
 	* expr.c (expand_expr): Call convert_modes when turning a large
 	multiply into a small one.
 
