--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-13  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* bugs.texi: Describe new ability to emit debug info
+	for EQUIVALENCE members.
+	* news.texi: Ditto.
+
 2000-08-11  G. Helffrich  <george@gly.bris.ac.uk>
             Toon Moene  <toon@moene.indiv.nluug.nl>
 
