--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-13  Geoff Keating  <geoffk@cygnus.com>
+
+	* Makefile.in (GCC_FOR_TARGET): Also add -B$$r/gcc/ here.
+
 2000-08-12  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config-ml.in (CC): Remove bogus duplicate quotation mark from
