In gcc/: 	* c-typeck.c (build_array_ref): Don't complain about non-lvalue 	arrays in C99.  Don't try to look at DECL_REGISTER of a 	COMPONENT_REF.  Don't complain twice about the same error.
In gcc/testsuite/:
	* gcc.dg/c99-array-lval-1.c: The test on line 14 now passes.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35666 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-13  Geoff Keating  <geoffk@cygnus.com>
+
+	* gcc.dg/c99-array-lval-1.c: The test on line 14 now passes.
+
 2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.pt/explicit81.C: New test.
