--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-13  Geoff Keating  <geoffk@cygnus.com>
 
+	* c-typeck.c (build_array_ref): Don't complain about non-lvalue
+	arrays in C99.  Don't try to look at DECL_REGISTER of a
+	COMPONENT_REF.  Don't complain twice about the same error.
+
 	* fixinc/inclhack.def (aix_pthread): New fix.
 	(aix_sysmachine): New fix.
 	* fixinc/fixincl.x: Regenerate.
