--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+Sun Aug 13 19:53:01 2000  Anthony Green  <green@redhat.com>
+
+	* THANKS: More thanks.
+
 2000-08-10  Tom Tromey  <tromey@cygnus.com>
 
 	* java/net/natPlainSocketImpl.cc (bind): Don't go to error case
