* cvt.c (warn_ref_binding): New static function, broken out of ... 	(convert_to_reference): ... here. Use it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35672 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-14  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* cvt.c (warn_ref_binding): New static function, broken out of ...
+	(convert_to_reference): ... here. Use it.	
+
 2000-08-11  Kriang Lerdsuwanakij <lerdsuwa@scf-fs.usc.edu>
 
 	* parse.y (template_arg): Add rule for template qualified with
