--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-14  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.other/refinit2.C: New test.
+
 2000-08-13  Geoff Keating  <geoffk@cygnus.com>
 
 	* lib/c-torture.exp (c-torture): Make
