* objc-features.texi (Top): Move @menu at end of node.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35674 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libobjc/ChangeLog
+++ b/libobjc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-14  Andreas Schwab  <schwab@suse.de>
+
+	* objc-features.texi (Top): Move @menu at end of node.
+
 2000-08-11  Manfred Hollstein  <manfredh@redhat.com>
 
 	* objc-features.texi: Move @node Top before @menu.
