--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-13  Kazu Hirata  <kazu@hxi.com>
+
+	* cse.c: Fix formatting.
+
 2000-08-13  Geoff Keating  <geoffk@cygnus.com>
 
 	* flow.c (attempt_auto_inc): Remove unused variable `bb'.
