--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2000-08-13  Kazu Hirata  <kazu@hxi.com>
 
+	* function.c: Fix formatting.
+
 	* cse.c: Fix formatting.
 
 2000-08-13  Geoff Keating  <geoffk@cygnus.com>
