* invoke.texi (H8/300 Options): Fix typos. 	* config/h8300.c: Fix formatting. 	* config/h8300.h: Fix comment typos. 	(OVERRIDE_OPTIONS): Fix formatting.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35677 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2000-08-13  Kazu Hirata  <kazu@hxi.com>
 
+	* invoke.texi (H8/300 Options): Fix typos.
+	* config/h8300.c: Fix formatting.
+	* config/h8300.h: Fix comment typos.
+	(OVERRIDE_OPTIONS): Fix formatting.
+
 	* function.c: Fix formatting.
 
 	* cse.c: Fix formatting.
