* h8300.md: Remove obsolete peepholes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35678 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-13  Ralf Gütlein <ralf.guetlein@aranea.de>
+
+	* h8300.md: Remove obsolete peepholes.
+
 2000-08-13  Kazu Hirata  <kazu@hxi.com>
 
 	* invoke.texi (H8/300 Options): Fix typos.
