--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Mon Aug 14 18:51:44 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* cse.c (insert_regs): Also in REG case: When finding an invalid
+	value, and we make a new quantity, make sure that it won't be
+	mistaken by for a valid one by mention_regs.
+
 2000-08-13  Ralf Gütlein <ralf.guetlein@aranea.de>
 
 	* h8300.md: Remove obsolete peepholes.
