top level: 	* configure: Make enable_threads and enable_shared defaults 	explicit.  Substitute enable_threads into generated Makefiles. 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*. 	* libtool.m4: Accept *-*-linux* not just *-*-linux-gnu*. gcc: 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*. 	* fixinc/inclhack.def: Likewise. 	* fixinc/mkfixinc.sh: Likewise. 	* configure: Regenerate. 	* fixinc/fixincl.x: Regenerate. 	* install.texi: Document equivalence of linux and linux-gnu. libio: 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*. 	Honor --disable-threads. libstdc++: 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*. 	Honor --disable-threads. libstdc++-v3: 	* configure: Regenerate after change to ../libtool.m4. libobjc: 	* configure: Regenerate after change to ../libtool.m4.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35680 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++/ChangeLog
+++ b/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-14  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*.
+	Honor --disable-threads.
+
 2000-08-11  Jason Merrill  <jason@redhat.com>
 
 	* std/straits.h (is_del): Boolify with !!.
