--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-14  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* configure: Make enable_threads and enable_shared defaults  
+	explicit.  Substitute enable_threads into generated Makefiles.
+	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*.
+	* libtool.m4: Accept *-*-linux* not just *-*-linux-gnu*.
+
 2000-08-13  Geoff Keating  <geoffk@cygnus.com>
 
 	* Makefile.in (GCC_FOR_TARGET): Also add -B$$r/gcc/ here.
