--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2000-08-14  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*.
+	* fixinc/inclhack.def: Likewise.
+	* fixinc/mkfixinc.sh: Likewise. 
+	* configure: Regenerate.
+	* fixinc/fixincl.x: Regenerate.
+	* install.texi: Document equivalence of linux and linux-gnu.
+
 Mon Aug 14 18:51:44 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* cse.c (insert_regs): Also in REG case: When finding an invalid
