--- a/libio/ChangeLog
+++ b/libio/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-14  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*.
+	Honor --disable-threads.
+
 Sun Jul 23 15:16:23 2000  Krister Walfridsson  <cato@df.lth.se>
 
 	* gen-params: Added trailing space for 'long long int' regexp.
