--- a/libobjc/ChangeLog
+++ b/libobjc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-14  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* configure: Regenerate after change to ../libtool.m4.
+
 2000-08-14  Andreas Schwab  <schwab@suse.de>
 
 	* objc-features.texi (Top): Move @menu at end of node.
