* expr.c (emit_group_load): Don't force constants into registers.         Special case source already in the correct mode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35683 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-14  Richard Henderson  <rth@cygnus.com>
+
+	* expr.c (emit_group_load): Don't force constants into registers.
+	Special case source already in the correct mode.
+
 2000-08-14  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* configure.in: Accept *-*-linux* not just *-*-linux-gnu*.
