--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-14  Richard Henderson  <rth@cygnus.com>
+
+	* config/ia64/ia64.md (movdi): Delay calling ia64_expand_load_address.
+	(movdi_symbolic): New.
+
 2000-08-14  Jim Wilson  <wilson@cygnus.com>
 
 	* config/ia64/ia64.h (ASM_SPEC): Pass -mconstant-gp and -mauto-pic
